0.52
    - undef no longer equals '' in is_deeply() [rt.cpan.org 6837]
    - is_deeply() would sometimes compare references as strings.
      [rt.cpan.org 7031]

0.51  Tue Nov 23 04:51:12 EST 2004
    - Fixed bug in fail_one.t on Windows (not a real bug).
    - TODO reasons as overloaded objects now won't blow up under threads.
      [Autrijus Tang]
    - skip() in 0.50 tickled yet another bug in threads::shared.  Hacked
      around it.

0.50  Sat Nov 20 00:28:44 EST 2004
    - Fixed bug in fail-more test on Windows (not a real bug).
      [rt.cpan.org 8022]
    - Change from CVS to SVK.  Hopefully this is the last time I move
      version control systems.
    - Again removing File::Spec dependency (came back in 0.48_02)
    - Change from Aegis back to CVS

0.49  Thu Oct 14 21:58:50 EDT 2004
    - t/harness_active.t would fail for frivolous reasons with older
      MakeMakers (test bug) [thanks Bill Moseley for noticing]

0.48_02  Mon Jul 19 02:07:23 EDT 2004
    * Overloaded objects as names now won't blow up under threads
      [rt.cpan.org 4218 and 4232]
    * Overloaded objects which stringify to undef used as test names
      now won't cause internal uninit warnings. [rt.cpan.org 4232]
    * Failure diagnostics now come out on their own line when run in 
      Test::Harness.
    - eq_set() sometimes wasn't giving the right results if nested refs 
      were involved [rt.cpan.org 3747]
    - isnt() giving wrong diagnostics and warning if given any undefs.
    * Give unlike() the right prototype [rt.cpan.org 4944]
    - Change from CVS to Aegis
    - is_deeply() will now do some basic argument checks to guard against
      accidentally passing in a whole array instead of its reference.
    - Mentioning Test::Differences, Test::Deep and Bundle::Test.
    - Removed dependency on File::Spec.
    - Fixing the grammar of diagnostic outputs when only a single test
      is run or failed (ie. "Looks like you failed 1 tests").
      [Darren Chamberlain]
