@@ -7,7 +7,7 @@ BEGIN {
     }
 }
 
-use Test::More tests => 42;
+use Test::More tests => 48;
 
 # Make sure we don't mess with $@ or $!.  Test at bottom.
 my $Err   = "this should not be touched";
@@ -67,10 +67,15 @@ pass('pass() passed');
 
 ok( eq_array([qw(this that whatever)], [qw(this that whatever)]),
     'eq_array with simple arrays' );
+is @Test::More::Data_Stack, 0, '@Data_Stack not holding onto things';
+
 ok( eq_hash({ foo => 42, bar => 23 }, {bar => 23, foo => 42}),
     'eq_hash with simple hashes' );
+is @Test::More::Data_Stack, 0;
+
 ok( eq_set([qw(this that whatever)], [qw(that whatever this)]),
     'eq_set with simple sets' );
+is @Test::More::Data_Stack, 0;
 
 my @complex_array1 = (
                       [qw(this that whatever)],
@@ -100,8 +105,11 @@ my @array2 = (qw(this that whatever),
 
 ok( !eq_array(\@array1, \@array2),
     'eq_array with slightly different complicated arrays' );
+is @Test::More::Data_Stack, 0;
+
 ok( !eq_set(\@array1, \@array2),
     'eq_set with slightly different complicated arrays' );
+is @Test::More::Data_Stack, 0;
 
 my %hash1 = ( foo => 23,
               bar => [qw(this that whatever)],
@@ -126,6 +134,7 @@ ok( eq_hash(\%hash1, \%hash2),  'eq_hash with complicated hashes');
 
 ok( !eq_hash(\%hash1, \%hash2),
     'eq_hash with slightly different complicated hashes' );
+is @Test::More::Data_Stack, 0;
 
 is( Test::Builder->new, Test::More->builder,    'builder()' );
 
